[metadata]
name = iqrm
url = https://github.com/v-morello/iqrm
author = Vincent Morello
author_email = vmorello@gmail.com
description = A minimal implementation of the IQRM interference flagging algorithm
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=2.7
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    numpy
    pytest
    pytest-cov

[versioneer]
VCS = git
style = pep440
versionfile_source = iqrm/_version.py
versionfile_build = iqrm/_version.py
tag_prefix =
parentdir_prefix = iqrm-