[metadata]
name =  iqrm
author = Vincent Morello
author_email = vmorello@gmail.com
description = A minimal implementation of the IQRM interference flagging algorithm
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

project_urls =
    Home Page = https://github.com/vmorello/iqrm
    Source Code = https://github.com/vmorello/iqrm
    Documentation = https://github.com/vmorello/iqrm
    Bug Reports = https://github.com/vmorello/iqrm/issues

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.8
install_requires = numpy
include_package_data = True
setup_requires = setuptools_scm[toml]>=6.0

[options.packages.find]
where=src
